<resources>
    <string name="app_name">TykeProf</string>
    <string name="password">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="players">Jugadores</string>
    <string name="ranking_list">Lista</string>
    <string name="ranking_chart">Gráfico</string>
    <string name="welcome">Bienvenido</string>
    <string name="exit">Salir</string>
    <string name="login">Iniciar Sesión</string>
    <string name="tyke_login">Inicio de Sesión en Tyke</string>
    <string name="incorrect_credentials">Las Credenciales son Incorrectas</string>
    <string name="empty_fields">Campos Vacíos</string>
    <string name="no_connection">No tienes conexión a la red</string>
    <string name="question_list_empty">No hay preguntas disponibles para</string>
    <string name="need_question_list">Debe crear al menos una pregunta para esta asignatura</string>
    <string name="success_aut">Autenticación Exitosa</string>
    <string name="failed_aut">Autenticación Fallida</string>
    <string name="required_user">Usuario Requerido</string>
    <string name="required_password">Contraseña Requerida</string>
    <string name="must_fill_fields">Debe llenar todos los Campos</string>
    <string name="change_user_config">Se ha detectado cambios en la configuración de Usuario</string>
    <string name="yes_connection">Usted está conectado a la red</string>
    <string name="cancel">Cancelar</string>
    <string name="yes">Si</string>
    <string name="exit_confirm">Confirmar Salir</string>
    <string name="exit_confirm_description">Desea realmente salir de la Aplicación</string>
    <string name="exit_again_toast">Presione de nuevo atrás para salir</string>
    <string name="home">Inicio</string>
    <string name="questions">Preguntas</string>
    <string name="question">Pregunta</string>
    <string name="clue_type">Tipo de Pista</string>
    <string name="question_type">Tipo de Pregunta</string>
    <string name="strategies">Estrategias</string>
    <string name="strategy">Estrategia</string>
    <string name="insignia">Insignia</string>
    <string name="grant">Otorgamiento</string>
    <string name="ranking">Ranking</string>
    <string name="gift">Regalo</string>
    <string name="professional_rol">Rol Profesional</string>
    <string name="gift_type">Tipo de Regalo</string>
    <string name="add">Añadir</string>
    <string name="check_connection">Debes tener conexión para realizar esta operación</string>
    <string name="delete_success">Se ha eliminado correctamente</string>
    <string name="save_success">Se ha insertado correctamente</string>
    <string name="edit_success">Se ha modificado correctamente</string>
    <string name="required">Requerido</string>
    <string name="try_again_operation">Por favor intente nuevamente la operación</string>
    <string name="accept">Aceptar</string>
    <string name="new_questiontype">Nuevo Tipo de Pregunta</string>
    <string name="new_gifttype">Nuevo Tipo de Regalo</string>
    <string name="games_points">Puntos de juego</string>
    <string name="clue_points">Puntos de pista</string>
    <string name="delete_question_type">Eliminar Tipo de Pregunta</string>
    <string name="confirm_delete_cuestion_type">Desea realmente eliminar este Tipo de Pregunta</string>
    <string name="delete_clue_type">Eliminar Tipo de Pista</string>
    <string name="delete_gift_type">Eliminar Tipo de Regalo</string>
    <string name="delete_gift">Eliminar Regalo</string>
    <string name="delete_grant">Eliminar Otorgamiento</string>
    <string name="delete_insignia">Eliminar Insignia</string>
    <string name="delete_profess_rol">Eliminar Rol Profesional</string>
    <string name="delete_question">Eliminar Pregunta</string>
    <string name="delete_strategy">Eliminar Estrategia</string>
    <string name="confirm_delete_gift">Desea realmente eliminar este Regalo</string>
    <string name="confirm_delete_strategy">Desea realmente eliminar esta Estrategia</string>
    <string name="confirm_delete_question">Desea realmente eliminar esta Pregunta</string>
    <string name="confirm_delete_gift_type">Desea realmente eliminar este Tipo de Regalo</string>
    <string name="confirm_delete_grant">Desea realmente eliminar este Otorgamiento</string>
    <string name="confirm_delete_insignia">Desea realmente eliminar esta Insignia</string>
    <string name="confirm_delete_profess_rol">Desea realmente eliminar este Rol Professional</string>
    <string name="confirm_delete_cluetype">Desea realmente eliminar este Tipo de Pista</string>
    <string name="points">Puntos</string>
    <string name="topic">Tema</string>
    <string name="career">Carrera</string>
    <string name="name">Nombre</string>
    <string name="edit_data_personal">Editar datos personales</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="password_dont_coincide">Las contraseñas no coinciden</string>
    <string name="new_insignia">Nueva Insignia</string>
    <string name="add_clue">Añadir Pista</string>
    <string name="create_answer">Crear Respuesta</string>
    <string name="add_bonus">Añadir Bonificación</string>
    <string name="new_gift">Nuevo Regalo</string>
    <string name="new_grant">Nuevo Otorgamiento</string>
    <string name="new_professional_rol">Nuevo Rol Profesional</string>
    <string name="new_clue_type">Nuevo Tipo de Pista</string>
    <string name="new_question">Nueva Pregunta</string>
    <string name="new_strategy">Nueva Estrategia</string>
    <string name="edit_gift">Editar Regalo</string>
    <string name="edit_insignia">Editar Insignia</string>
    <string name="edit_grant">Editar Otorgamiento</string>
    <string name="edit_clue_type">Editar Tipo de Pista</string>
    <string name="advance_points">Puntos de Avance</string>
    <string name="grant_points">Puntos a Otorgar</string>
    <string name="user_concat">Usuario: %s</string>
    <string name="email">Correo: %s</string>
    <string name="subject_concat">Asignatura: %s</string>
    <string name="points_concat">Puntos: %s</string>
    <string name="punctuation_concat">Puntuación: %s</string>
    <string name="time_for_answer">Tiempo para responder(s): %s</string>
    <string name="dob">Nacimiento: %s</string>
    <string name="user_profile">Perfil de Usuario</string>
    <string name="new_password">Nueva Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="email_dialog">Correo</string>
    <string name="description">Descripción</string>
    <string name="select_dob">Escoja una Fecha</string>
    <string name="edit_data">Editar Datos</string>
    <string name="should_register_asteacher">Debe registrarse como Profesor</string>
    <string name="answer_cant">Cant. de respuestas: </string>
    <string name="creator">Creador: </string>
    <string name="clue_cant">Cant. de pistas: </string>
    <string name="questions_cant">Cant. de pistas: </string>
    <string name="strategy_cant">Cant. de estrategias:</string>
    <string name="topics_cant">Cant. de Temas: </string>
    <string name="question_cant">Cant. de preguntas: </string>
    <string name="answer_time">Tiempo para responder:</string>
    <string name="answer_point">Puntuación por contestar:</string>
    <string name="clue">Pista</string>
    <string name="question_title">Titulo pregunta:</string>
    <string name="question_title_all">Titulo de la pregunta</string>
    <string name="punctuation">Puntuación</string>
    <string name="bonus">Bonificación:</string>
    <string name="time_less">Tiempo Menor</string>
    <string name="bonus_cant">Cant. de Bonificaciones:</string>
    <string name="subject">Asignatura</string>
    <string name="subjects">Asignaturas</string>
    <string name="answer">Respuesta</string>
    <string name="order">Orden</string>
    <string name="should_add_answer">Debe añadir respuestas</string>
    <string name="question_link">Pregunta a enlazar</string>
    <string name="answer_link">Respuesta a enlazar</string>
    <string name="answer_order">Respuesta a ordenar</string>
    <string name="correct">Correcta</string>
    <string name="incorrect">Incorrecta</string>
    <string name="link">Enlaza</string>
    <string name="question_data">Datos de la Pregunta</string>
    <string name="strategy_data">Datos de la Estrategia</string>
    <string name="type_and_answers">Tipo y respuestas</string>
    <string name="clues">Pistas</string>
    <string name="bonusses">Bonificaciones</string>
    <string name="summary">Resumen</string>
    <string name="build_strategy">Conformar Estrategia</string>
    <string name="add_questions">Agregar Preguntas</string>
    <string name="strategy_name">Nombre de la estrategia</string>
    <string name="enabled">Habilitada</string>
    <string name="evaluated">Evaluada</string>
    <string name="question_summary">Resumen de la pregunta</string>
    <string name="stratgey_summary">Resumen de la estrategia</string>
    <string name="ready">Listo</string>
    <string name="topics">Temas</string>
    <string name="group_available">Grupos Disponibles</string>
    <string name="question_available">Preguntas Disponibles</string>
    <string name="group_cant">Cant. de grupos:</string>
    <string name="Settings">Configuración</string>
    <string name="Darkmode">Modo Oscuro</string>
    <string name="DarkmodeisEnabled">Habilitado</string>
    <string name="DarkmodeisDisabled">Deshabilitado</string>
    <string name="VisualInterface">Interfaz Visual</string>
    <string name="information">Información</string>
    <string name="TextInf">Aplicación desarrollada por la Facultad de Informática de la cujae dedicada a los profesores del Ministerio de Educación Superior para la formación vocacional de los estudiantes</string>
    <string name="Version" translatable="false">Version: beta 0.1.23</string>
    <string name="Informatic_Faculty">Facultad de Informática</string>
    <string name="others">Otros</string>
    <string name="add_question">Agregar Pregunta</string>
    <string name="add_strategy">Agregar Estrategia</string>
</resources>