<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/nav_home_Fragment">

    <fragment
        android:id="@+id/nav_home_Fragment"
        android:name="cu.cujae.gilsoft.tykeprof.app.fragment.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/go_QuestionTypeFragment"
            app:destination="@id/nav_questionTypeFragment" />
        <action
            android:id="@+id/go_ClueTypeFragment"
            app:destination="@id/nav_clueTypeFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_questionTypeFragment"
        android:name="cu.cujae.gilsoft.tykeprof.app.fragment.QuestionTypeFragment"
        android:label="@string/question_type"
        tools:layout="@layout/question_type_fragment" />
    <fragment
        android:id="@+id/nav_clueTypeFragment"
        android:name="cu.cujae.gilsoft.tykeprof.app.fragment.ClueTypeFragment"
        android:label="@string/clue_type"
        tools:layout="@layout/clue_type_fragment" />
</navigation>