<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.fragment.NewStrategyFragment">

    <TextView
        android:id="@+id/textViewStrategySummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/stratgey_summary"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <view
        android:id="@+id/view"
        class="androidx.recyclerview.widget.RecyclerView"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/textViewStrategySummary"
        app:layout_constraintStart_toStartOf="@+id/textViewStrategySummary"
        app:layout_constraintTop_toBottomOf="@+id/textViewStrategySummary" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButtonBack3Step"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewStrategyNameFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/strategy_name"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewCantsPointsFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="Cant. de puntos"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewStrategyNameFinish"
                app:layout_constraintTop_toBottomOf="@+id/textViewStrategyNameFinish" />

            <TextView
                android:id="@+id/textViewEnabledFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/enabled"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textViewCantsPointsFinish"
                app:layout_constraintTop_toBottomOf="@+id/textViewCantsPointsFinish" />

            <TextView
                android:id="@+id/textViewEvaluatedFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/evaluated"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewEnabledFinish"
                app:layout_constraintTop_toBottomOf="@+id/textViewEnabledFinish" />

            <TextView
                android:id="@+id/textViewSubjectFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/subject"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewEvaluatedFinish"
                app:layout_constraintTop_toBottomOf="@+id/textViewEvaluatedFinish" />

            <TextView
                android:id="@+id/textViewCantsGroupFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/group_cant"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewSubjectFinish"
                app:layout_constraintTop_toBottomOf="@+id/textViewSubjectFinish" />

            <TextView
                android:id="@+id/textViewCantsQuestionsFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/question_cant"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewCantsGroupFinish"
                app:layout_constraintTop_toBottomOf="@+id/textViewCantsGroupFinish" />

            <TextView
                android:id="@+id/textViewTopicFinish"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/topics"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewCantsQuestionsFinish"
                app:layout_constraintTop_toBottomOf="@+id/textViewCantsQuestionsFinish" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewTopicFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTopicFinish" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonBack3Step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorToolbarTyke"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/white"
        app:srcCompat="@drawable/ic_arrow_back" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonFinishNewStrategy"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorBlueDarkTyke"
        android:clickable="true"
        android:text="@string/ready"
        app:icon="@drawable/ic_done_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>