<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.fragment.NewQuestionFragment">

    <TextView
        android:id="@+id/textViewQuestionSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Resumen de la pregunta"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <view
        android:id="@+id/view"
        class="androidx.recyclerview.widget.RecyclerView"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="@+id/textViewQuestionSummary"
        app:layout_constraintStart_toStartOf="@+id/textViewQuestionSummary"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuestionSummary" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/materialButtonFinishNewQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewQuestionTitleFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/question_title"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewAnswerTimeFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/answer_time"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewQuestionTitleFinish"
                app:layout_constraintTop_toBottomOf="@+id/textViewQuestionTitleFinish" />

            <TextView
                android:id="@+id/textViewQuestionTypeFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/question_type"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/textViewAnswerTimeFinish"
                app:layout_constraintTop_toBottomOf="@+id/textViewAnswerTimeFinish" />

            <TextView
                android:id="@+id/textViewBonusFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="Bonificación: "
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewQuestionTypeFinish"
                app:layout_constraintTop_toBottomOf="@+id/textViewQuestionTypeFinish" />

            <TextView
                android:id="@+id/textViewClueFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/clue"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewBonusFinish"
                app:layout_constraintTop_toBottomOf="@+id/textViewBonusFinish" />

            <TextView
                android:id="@+id/textViewSubjectFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/subject"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewClueFinish"
                app:layout_constraintTop_toBottomOf="@+id/textViewClueFinish" />

            <TextView
                android:id="@+id/textViewScoreFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/punctuation"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewSubjectFinish"
                app:layout_constraintTop_toBottomOf="@+id/textViewSubjectFinish" />

            <TextView
                android:id="@+id/textViewAnswerCantFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/answer_cant"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewScoreFinish"
                app:layout_constraintTop_toBottomOf="@+id/textViewScoreFinish" />

            <TextView
                android:id="@+id/textViewBonusCantFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/bonus_cant"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewAnswerCantFinish"
                app:layout_constraintTop_toBottomOf="@+id/textViewAnswerCantFinish" />

            <TextView
                android:id="@+id/textViewClueCantFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/clue_cant"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textViewBonusCantFinish"
                app:layout_constraintTop_toBottomOf="@+id/textViewBonusCantFinish" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonBack4Step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorToolbarTyke"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/white"
        app:srcCompat="@drawable/ic_arrow_back" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonFinishNewQuestion"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorBlueDarkTyke"
        android:clickable="true"
        android:text="Listo"
        app:icon="@drawable/ic_done_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>